--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,7 @@ body {
 	font-size: 16px;
 	font-weight: 400;
 	color: #000;
-	background-color: #dad6d6ff;
+	background-color:#FEBCAA;
 	min-width: 320px;
    
 }
@@ -31,7 +31,7 @@ a:hover {
 
 /* Header */
 .navbar-light .navbar-nav .nav-link {
-	color: #111;
+
 	font-weight: 500;
 	text-transform: uppercase;
 }
@@ -67,17 +67,71 @@ a:hover {
 
 
 .my-carousel {
-    max-width: 50%; /* Установка максимальной ширины карусели */
-    margin: auto; /* Центрирование карусели на странице */
+    max-width: 50%; 
+    margin: auto; 
   }
   
   .carousel-inner {
-    width: 200%; /* Увеличение ширины контейнера, чтобы поместить все элементы */
+    width: 200%;
   }
   
   .carousel-item {
-    width: 50%; /* Установка ширины каждого элемента карусели */
-    height: auto; /* Автоматическая высота, чтобы сохранить пропорции */
+    width: 50%;
+    height: auto; 
   }
   
   
+  nav.navbar {
+    background-color: #9C2C46 !important;
+}
+
+nav.navbar .navbar-nav .nav-link {
+    color: #fff !important; 
+}
+.navbar {
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+.description {
+	text-align: center;
+}
+
+.description h1 {
+	font-size: 2em; 
+	margin-bottom: 20px; 
+}
+
+.description p {
+	font-size: 1em; 
+    line-height: 1.6; 
+	text-align: left;
+}
+@media only screen and (max-width: 767px) {
+    .description h1 {
+        font-size: 1em; 
+      }
+    .description p {
+      font-size: 0.8em; 
+    }
+  }
+.carousel {
+    border: 5px solid #9C2C46; 
+    border-radius: 10px; 
+}
+.carousel {
+    border-radius: 15px;
+    overflow: hidden;
+}
+
+
+
+.custom-footer {
+    background-color: #9C2C46;
+    color: white;
+    padding-top: 20px;
+    margin-top: 20px; 
+    border-top-left-radius: 15px; 
+    border-top-right-radius: 15px; 
+}
+
+
